# wakeonlan

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.arm  README.md  docker-compose.yml  package.json
.github/workflows/: docker-image.yml
agent/: Cargo.toml
agent/src/: main.rs  service.rs
backend/: Cargo.toml
backend/src/: agent.rs  client.rs  main.rs
server/: Dockerfile  funcs.js  funcs.ts  index.js  index.ts  initdb.js  initdb.ts  package.json  ping.js  ping.ts  pnpm-lock.yaml  routes.js  server.ts  tsconfig.json  websocket.ts
services/: wakeonlan-tunnel.service  wakeonlan.service
web/: .eslintrc.cjs  package.json  pnpm-lock.yaml  rollup.config.js  svelte.config.js  tailwind.config.cjs  vite.config.ts
web/public/: index.html
web/src/: App.svelte  Device.svelte  DevicesPage.svelte  app.css  app.d.ts  app.html  login.svelte  modal.svelte  request.js  store.js
web/src/device/: edit.svelte  normal.svelte  page.svelte
web/src/lib/: Confirm.svelte  Modal.svelte  PageTransition.svelte  request.ts  store.ts
web/src/lib/device/: device.svelte  edit.svelte  normal.svelte
web/src/lib/icons/: edit.svelte  spinner.svelte  trash.svelte  wifi.svelte
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/login/: +page.svelte
